# openhands-graphiti-memory

./: .env.example  .gitignore  AGENTS.md  AGENT_PATCH_MILESTONE0.md  ALL_MILESTONES_PROVEN.md  ARCHITECTURE_DETAILED_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CORRECTED_INTEGRATION_ASSESSMENT.md  CRITICAL_FOLLOWUP.md  DECISIONS.md  Dockerfile  EXECUTION_TRACE.md  INTEGRATION_GUIDE.md  LICENSE  MILESTONE0_VALIDATION.md  ORGANIZATION_COMPLETE.md  PHASE2_COMPLETE.md  QUICK_REFERENCE.md  README.md  README_OLD.md  ROADMAP.md  docker-compose.yml  fake_memory_provider.py  integrate_memory.py  pyproject.toml  test_bedrock_integration.py  verify_installation.sh
.github/: AGENT_FRAMEWORK.md  ANALYSIS_REPORT.md  EVIDENCE_REPORT.md  EVOLUTION_AUDIT.md  IMPLEMENTATION_REPORT.md  INVESTIGATION_IMPORT_BLOCKAGE.md  MIGRATION_PLAN.md  MIGRATION_PLAN_REVISED.md  VALIDATION_REPORT.md  copilot-instructions.md  dependency-graph.json  migration-audit.json  reachability-audit.json
docs/: ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_REDESIGN.md  ARCHITECTURE_SUMMARY.md  BACKEND_ENGINEER_BRIEF.md  GRAPHITI_ARCHITECTURE_AUDIT.md  HONEST_ASSESSMENT_VALIDATION_GAP.md  KNOWLEDGE_ADMISSION_DECISION.md  KNOWLEDGE_ADMISSION_MVP.md  KNOWLEDGE_ADMISSION_MVP_COMPLETE.md  README.md
examples/: quickstart.py
sdk_models/: __init__.py
src/: admission_classifier.py  backend_interface.py  data_models.py  feedback_processor.py  graphiti_adapter.py  graphiti_client.py  graphiti_provider.py  knowledge_admission_mvp.py  memory_loader.py  metrics_collector.py  milestone11_feedback.py  milestone3_builder.py  (+8 more)
(+35 files in other folders)
